# wiz-craft

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  ROADMAP.md  imputation.py  pyproject.toml  requirements.txt  setup.py  test.py  wizcraft.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  python-publish.yml
tests/: test_doctor.py  test_imputation.py  test_recipe.py  test_transforms.py
tools/: preview_doctor.py
wiz_craft.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
wizcraft/: categorical.py  cli.py  data_description.py  doctor.py  download.py  feature_selection.py  imputation.py  io.py  preprocess.py  recipe.py
