[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiz-craft"
version = "1.2.1"
description = "A beginner-friendly CLI for preprocessing tabular ML datasets with replayable recipes."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Pinak Datta", email = "pinakdatta30402@gmail.com" }
]
keywords = [
  "data-cleaning",
  "data-preprocessing",
  "machine-learning",
  "pandas",
  "scikit-learn",
  "cli",
  "tabular-data"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1,<3",
  "rich>=13.5,<15",
  "scikit-learn>=1.3,<2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9"
]

[project.urls]
Homepage = "https://github.com/Pinak-Datta/wiz-craft"
Repository = "https://github.com/Pinak-Datta/wiz-craft"
Issues = "https://github.com/Pinak-Datta/wiz-craft/issues"

[project.scripts]
wizcraft = "wizcraft.cli:main"

[tool.setuptools.packages.find]
include = ["wizcraft*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
